@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect</groupId>
     <artifactId>denodo-mongodb-customwrapper-5.0</artifactId>
-    <version>20160726</version>
+    <version>20161108</version>
     <packaging>jar</packaging>
     <name>denodo-mongodb-customwrapper-5.0</name>
 
